# req

./: .gitignore  CLAUDE.md  Cargo.toml  FINAL_RECOMMENDATION.md  FINAL_STATUS.md  IMPLEMENTATION_PLAN.md  INTEGRATION.md  INTEGRATION_INDEX.md  INTEGRATION_REVIEW.md  INTEGRATION_SUMMARY.md  INTEGRATION_v2.md  OVERVIEW.md  PROMPT_HISTORY.md  README.md  REQUIREMENTS.md  SIMPLIFIED_INTEGRATION.md  SPEC_ID_AS_ALTERNATE_KEY.md  SPEC_ID_IMPLEMENTATION_COMPLETE.md  UUID_SPEC_ID_VERIFICATION.md  default_requirements.yaml  requirements.yaml  requirements.yaml.backup
.claude/commands/: aida-capture.md  aida-implement.md  aida-req.md  review.md  status.md
.claude/skills/: aida-capture.md  aida-implement.md  aida-release.md  aida-req.md
.github/workflows/: ci.yml
aida-cli/: Cargo.toml
aida-cli/src/: cli.rs  main.rs  prompts.rs
aida-core/: Cargo.toml
aida-core/src/: export.rs  lib.rs  models.rs  registry.rs  scaffolding.rs  storage.rs
aida-core/src/ai/: client.rs  evaluator.rs  mod.rs  prompts.rs  responses.rs
aida-core/src/db/: migration.rs  mod.rs  schema.sql  sqlite_backend.rs  traits.rs  yaml_backend.rs
aida-gui/: Cargo.toml
aida-gui/src/: app.rs  app_full.rs  main.rs
docs/: AI_INTEGRATION_DESIGN.md  DEVELOPER_GUIDE.md  RELATIONSHIP_DESIGN.md  admin-guide.md  user-guide-dark.html  user-guide.html  user-guide.md
helper/: generate-docs.sh
requirements-cli/: Cargo.toml
requirements-cli/src/: cli.rs  main.rs  prompts.rs
requirements-core/: Cargo.toml
requirements-core/src/: lib.rs  models.rs  project.rs  registry.rs  storage.rs
requirements-gui/: Cargo.toml
requirements-gui/src/: app.rs  app_full.rs  main.rs
requirements-manager/: .gitignore  .requirements-mapping.yaml  Cargo.toml  INTEGRATION_COMPLETE.md  requirements.yaml  test_registry.yaml
requirements-manager/src/: cli.rs  main.rs  models.rs  project.rs  prompts.rs  registry.rs  storage.rs
templates/: ai-prompts-standard.yaml
