[workspace]
resolver = "2"
members = [
    "aida-core",
    "aida-cli",
    "aida-gui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Joe Mooney"]

[workspace.dependencies]
# Shared dependencies
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
dirs = "5.0"
fs2 = "0.4"  # Cross-platform file locking for multi-user support
rusqlite = { version = "0.31", features = ["bundled"] }  # SQLite database support

# CLI dependencies
clap = { version = "4.4", features = ["derive"] }
inquire = { version = "0.9.1", features = ["editor"] }
colored = "2.0"

# GUI dependencies
eframe = "0.29"
egui = "0.29"
egui_extras = { version = "0.29", features = ["all_loaders"] }
