[package]
name = "aida-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "CLI for AIDA requirements management"

[[bin]]
name = "aida"
path = "src/main.rs"

[dependencies]
aida-core = { path = "../aida-core" }

# CLI-specific dependencies
clap = { workspace = true }
inquire = { workspace = true }
colored = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
