[package]
name = "aida-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Core library for AIDA requirements management - shared between CLI and GUI"

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
fs2 = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
