[package]
name = "aida-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "GUI for AIDA requirements management (egui-based)"

[[bin]]
name = "aida-gui"
path = "src/main.rs"

[dependencies]
aida-core = { path = "../aida-core" }

# GUI dependencies
eframe = { workspace = true }
egui = { workspace = true }
egui_extras = { workspace = true }
egui_commonmark = "0.18"
anyhow = { workspace = true }
uuid = { workspace = true }
env_logger = "0.11"
chrono = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
dirs = "5.0"
url = "2"
open = "5"
arboard = "3"
rfd = "0.15"
